[package]
name = "cairo-vm-base"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v3.0.0-rc.3", features = [
    "extensive_hints",
    "clap",
    "cairo-1-hints",
    "mod_builtin",
] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
alloy-primitives = "0.8.13"
serde = { version = "1.0.215", features = ["derive"] }
hex = "0.4"
bincode = "2.0.1"

[features]
default = []

[dev-dependencies]
serde_json = "1.0"
